<resources>
    <string name="app_name">Mobile Game Master</string>
    <string name="main_title">Be Your Own Gamemaster!</string>
    <string name="choose_your_game">Choose your game:</string>
    <string name="timer">Timer</string>
    <string name="_60_00">60:00</string>
    <string name="room_name">Room Name</string>
    <string name="start">Start</string>
    <string name="nudge">Nudge</string>
    <string name="hint">Hint</string>
    <string name="solution">Solution</string>
    <string name="hint_box_text">Press button above for a Nudge, a Hint, or the Solution.</string>
    <string name="enter_answer">Enter Answer to Continue:</string>
    <string name="enter_puzzle_answer_here">Enter answer here</string>
    <string name="continue_text">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="room">Room:</string>
    <string name="abandon_puzzle">Abandon Puzzle</string>
    <string name="save_and_finish">Save and Finish</string>
    <string name="next_puzzle">Next Puzzle</string>
    <string name="puzzle">Puzzle </string>
    <string name="press_finish_to_continue">Press Finish to Continue</string>
    <string name="finish">Finish</string>
    <string name="game_logs">Game Logs</string>
    <string name="edit_rooms">Edit Rooms</string>
    <string name="tap_room_to_edit_or_delete">Tap a room to edit or delete</string>
    <string name="press_and_hold_to_rename">Press and hold room name to change it</string>
    <string name="add_an_escape_room">Add an Escape Room</string>
    <string name="puzzle_list">Puzzle List</string>
    <string name="delete_logs">Delete Logs</string>
    <string name="add_room">Add Room</string>
    <string name="edit_delete_room">Edit/Delete Room</string>
    <string name="report_logs">Report Logs</string>
    <string name="search_by_room_name">Search by Room Name:</string>
    <string name="back_button">Back Button</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_passcode">Enter username and password:</string>
    <string name="edit_delete_users">Edit/Delete Users</string>
    <string name="choose_user_to_edit_delete">Choose user to edit/delete:</string>
    <string name="edit_passwords">Edit Passwords</string>
    <string name="edit_username_password">Edit Username/Password</string>
    <string name="current_password">Current Password:</string>
    <string name="user_name">User Name:</string>
    <string name="new_password">New Password:</string>
    <string name="add_user">Add User</string>
    <string name="save_puzzle">Save Puzzle</string>
    <string name="cancel_changes">Cancel Changes</string>
    <string name="delete_puzzle">Delete Puzzle</string>
    <string name="placeholder">Placeholder</string>
    <string name="nudge_num">Nudge Num</string>
    <string name="hint_num">Hint Num</string>
    <string name="solution_num">Solution Num</string>
    <string name="welcome_to_mobile_game_master">Welcome to Mobile Game Master!</string>
    <string name="welcome_intro">This app is designed to assist Escape Room Players and Gamemasters. The menu in the upper right accesses admin functions.
    The default username/password is Admin and password. </string>
    <string name="add_room_intro">Use Add Room to create a new Escape Room. After naming the room you can add any number of puzzles.
    Puzzles include a Nudge, a Hint, and a Solution.</string>
    <string name="edit_room_intro">Edit/Delete Room lets you delete a Room and all of its Puzzles, or simply add or edit a Rooms puzzles.</string>
    <string name="edit_users_intro"> Edit/Delete Users lets you add new users or edit the credentials of existing users.</string>
    <string name="report_logs_intro">The Game Logs give you a record of statistics for completed rooms. You can search by room name and see the date and
    time the room was started and the time remaining at the end.</string>
    <string name="ok">Okay</string>
    <string name="search">Search</string>
    <string name="time_left">Time Left</string>
    <string name="date_played">Date Played</string>
    <string name="start_time">Start Time</string>
    <string name="back">Back</string>
    <string name="save_user">Save User</string>
    <string name="delete_user">Delete User</string>
    <string name="add_puzzle">Add Puzzle</string>
    <string name="finish_edits">Finish Edits</string>
    <string name="delete_room">Delete Room</string>
    <string name="submit">Submit</string>
    <string name="edit_puzzles">Edit Puzzles</string>
    <string name="add_puzzles">Add Puzzles</string>
    <string name="check_to_turn_off_tip">Check to turn off tip</string>
    <string name="update_room_name">Update Room Name</string>
    <string name="save">Save</string>
    <string name="admin_menu">Admin Menu</string>
    <string name="sign_out">Sign Out</string>
    <string name="user">User:</string>
    <string name="loading">Loading…</string>
    <string name="reset_tutorial">Reset Tutorial Pop-ups</string>
    <string name="db_dialog_message">Are you sure you want to make this change?</string>
    <string name="db_dialog_positive">Yes</string>
    <string name="db_dialog_negative">No</string>
    <string name="puzzle_name">Puzzle Name: </string>
    <string name="timer_length">Timer Length</string>
    <string name="change_timer">Change Timer</string>
    <string name="set_timer_length">Set Timer Length</string>
    <string name="time_in_minutes">Time in minutes</string>
    <string name="room_timer">Room Timer</string>
    <string name="db_user_delete">Are you sure you want to delete this user?</string>
    <string name="db_add_user">Are you sure you want to add this user?</string>
    <string name="db_user_update">Are you sure you want to update the users password?</string>
    <string name="re_order_icon">Re-order icon</string>
    <string name="db_logs_delete">"Are you sure you want to delete all game logs?"</string>
    <string name="db_puzzle_save">Are you sure you want to save these changes?</string>
    <string name="db_puzzle_delete">Are you sure you want to delete this puzzle?</string>
    <string name="export">Export</string>
</resources>