<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AdminMenu"
    android:background="@drawable/pavel_neznanov_background">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/adminTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/adminButtonLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/menuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/admin_menu"
            android:textSize="34sp"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/adminNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/placeholder"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="28sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/adminButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminTitleLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/menuAddRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_room"/>

        <Button
            android:id="@+id/menuEditRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_delete_room"/>

        <Button
            android:id="@+id/menuEditPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_delete_users"/>

        <Button
            android:id="@+id/menuGameLogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_logs"/>

        <Button
            android:id="@+id/menuSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>