<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="320sp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="?android:attr/colorBackground"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_mobile_game_master"
        android:textStyle="bold"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="center"
        android:background="?android:attr/colorBackground"
        android:fontFamily="serif"
        />

    <TextView
        android:id="@+id/dialog_startup_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_marginBottom="6sp"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">
    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <CheckBox
        android:id="@+id/dialogCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_to_turn_off_tip" />
</androidx.appcompat.widget.LinearLayoutCompat>