<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="205sp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#dddddd">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32sp"
        android:text="@string/enter_passcode"
        android:textStyle="bold|italic"
        android:background="#ffbb11"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/username"
        android:autofillHints="Username"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4sp"
        android:fontFamily="sans-serif"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/password"
        android:autofillHints="Password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelText"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:background="#ffaaaa"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textStyle="bold"
            android:clickable="true"/>

        <TextView
            android:id="@+id/signInText"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:background="#aaffaa"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textStyle="bold"
            android:clickable="true"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>